# themisto

./: .gitignore  .gitmodules  Argv.hh  BOSS.hh  BOSS_builder.hh  Block.hh  CMakeLists.txt  CMakeLists.txt.in  CMakeLists_bzip2.txt.in  CMakeLists_zlib.txt.in  Coloring.hh  Dockerfile  EM_algorithms.hh  EM_sort.hh  EM_sort_tests.hh  KMC_test.cpp  KMC_tester.cpp  KMC_wrapper.cpp  KMC_wrapper.hh  KallistoLite.hh  Makefile  NameMapping.hh  ParallelBoundedQueue.hh  README.md  TempFileManager.hh  Themisto.hh  WorkDispatcher.hh  bit_level_stuff.hh  build_index.cpp  compute_color_similarity_matrix.cpp  count_hits_to_clusters.cpp  count_pseudoalignments.cpp  generic_EM_classes.hh  globals.hh  input_reading.hh  kmer_tools.cpp  kmer_tools.hh  list_kmers.hh  mark_kmers.hh  pseudoalign.cpp  (+8 more)
.github/workflows/: make_release.yml
BD_BWT_index/: CMakeLists.txt  Makefile  README.md
BD_BWT_index/dbwt/: dbwt.c  dbwt_queue.c  dbwt_queue.h  dbwt_utils.c  dbwt_utils.h  sais.c
BD_BWT_index/include/: BD_BWT_index.hh  Interval.hh  Iterators.hh  Makefile  bwt.hh  cmake_install.cmake  dbwt.h  io_tools.hh
BD_BWT_index/include/sdsl/: select_support_mcl.hpp
BD_BWT_index/src/: bwt.cpp  io_tools.cpp  main.cpp
KMC/: CMakeLists.txt  Makefile
KMC/include/: version.h
KMC/kmc_core/: splitter.cpp
KMC/kmc_tools/: fastq_reader.cpp  fastq_reader.h  kmc_tools.cpp  kmer.h
deploy/linux/: build.sh  compile.sh
deploy/macOS/: arm64-toolchain_GNU.cmake  build.sh  compile_in_docker.sh  x86-64-toolchain_GNU.cmake
example_input/: coli_file_list.txt  colors.txt  queries.fna
include/: Block.hh  Color_Set.hh  Color_Set_Interface.hh  Color_Set_Storage.hh  Coloring.hh  Coloring_Builder.hh  DBG.hh  EM_algorithms.hh  EM_sort.hh  Fixed_Width_Int_Color_Set.hh  KMC_code.hh  KMC_wrapper.hh  ParallelBoundedQueue.hh  ParallelQueue.hh  ReadBatch.hh  Roaring_Color_Set.hh  SeqIO.hh  Sparse_Uint_Array.hh  Succinct_Prefix_Sum.hh  TempFileManager.hh  Themisto.hh  ThreadPool.hh  WorkDispatcher.hh  backward_traversal.hh  backwards_traversal.hh  bit_level_stuff.hh  bit_magic_color_set.hh  buffered_streams.hh  commands.hh  core_kmer_marker.hh  delta_vector.hh  dump_index.hh  extract_unitigs.hh  generic_EM_classes.hh  globals.hh  input_reading.hh  kseq.hh  new_coloring.hh  new_extract_unitigs.hh  new_input_reading.hh  (+10 more)
include/coloring/: Color_Set.hh  Color_Set_Interface.hh  Color_Set_Storage.hh  Coloring.hh  Coloring_Builder.hh  Coloring_builder_from_ggcat.hh  Fixed_Width_Int_Color_Set.hh  Roaring_Color_Set.hh  Sparse_Uint_Array.hh  core_kmer_marker.hh  delta_vector.hh  hybrid_color_set.hh
include/libwheeler/: BOSS.hh  BOSS_builder.hh  BOSS_tests.hh  IO.hh  Kmer.hh  Kmer_tests.hh  WheelerIndex.hh
integration_tests/: README.md
integration_tests/indexing/: run.py
integration_tests/queries/: gen_queries.py  parameters.csv  rhinovirus_C.txt  run.py
integration_tests/queries/reference_implementation/: KmerIndex.hh  build.sh  reference_implementation.cpp
integration_tests/queries/reference_implementation/SeqIO/: SeqIO.cpp
integration_tests/ref_sequences/: colorfile.txt
integration_tests/reference_implementation/: Kmer.hh  KmerIndex.hh  Makefile  build.sh  reference_implementation.cpp  utils.hh
integration_tests/reference_implementation/SeqIO/: SeqIO.hh  buffered_streams.hh
integration_tests/reference_implementation/SeqIO/zstr/: strict_fstream.hpp  zstr.hpp
integration_tests/tests/queries/: run.py
integration_tests/tests/queries/reference_implementation/: reference_implementation.cpp
integration_tests/tests/queries/reference_implementation/SeqIO/: SeqIO.hh  buffered_streams.hh  throwing_streams.hh
libwheeler/: BOSS.hh  BOSS_builder.hh  BOSS_construction.hh  BOSS_tests.hh  Kmer.hh  Kmer_tests.hh  WheelerIndex.hh
src/: Block.cpp  DBG.cpp  EM_algorithms.cpp  EM_sort.cpp  KMC_wrapper.cpp  Roaring_Color_Set.cpp  SeqIO.cpp  Themisto.cpp  WorkDispatcher.cpp  build_index.cpp  build_index_main.cpp  color_set.cpp  color_set_diagnostics.cpp  coloring.cpp  compute_color_similarity_matrix.cpp  dump_color_information.cpp  dump_color_matrix_main.cpp  dump_distinct_color_sets_to_binary.cpp  dump_index.cpp  dump_index_main.cpp  dump_nodeboss.cpp  extract_unitigs.cpp  extract_unitigs_main.cpp  globals.cpp  make_d_equal_1.cpp  new_coloring.cpp  new_extract_unitigs.cpp  new_new_coloring.cpp  pseudoalign.cpp  pseudoalign_main.cpp  run_tracker.cpp  stats_main.cpp  test_tools.cpp  themisto_main.cpp  zpipe.cpp
src/coloring/: color_set.cpp  color_set_diagnostics.cpp
testcases/: colors.txt
tests/: benchmark_io.cpp  setup_tests.hh  test_CLI.hh  test_DBG.hh  test_EM_sort.hh  test_IO.hh  test_color_set.hh  test_color_set_storage.hh  test_coloring.hh  test_delta_vector.hh  test_extract_unitigs.hh  test_input_reading.hh  test_main.cpp  test_misc.hh  test_new_new_coloring.hh  test_pseudoalignment.hh  test_sparse_uint_array.hh  test_work_dispatcher.hh
zstr/: strict_fstream.hpp
